--- a/index.html
+++ b/index.html
@@ -350,7 +350,8 @@
     <h1>Vashisht<br><span>Brahmbhatt</span></h1>
     <p class="subtitle">Data Science &amp; CS Engineering student building intelligent systems at the intersection of ML, product, and infrastructure.</p>
     <div class="contact-row">
-      <a href="mailto:vashishtdb24@gmail.com" class="contact-pill">✉ vashishtdb24@gmail.com</a>
+      <a href="mailto:vashishtdb24@gmail.com" class="contact-pill">✉ <!--email_off-->vashishtdb24@gmail.com<!--/email_off--></a>
+      <a href="mailto:23f3000948@ds.study.iitm.ac.in" class="contact-pill">✉ <!--email_off-->23f3000948@ds.study.iitm.ac.in<!--/email_off--></a>
       <a href="#" class="contact-pill">⌖ LinkedIn</a>
       <a href="#" class="contact-pill">⌗ GitHub: VDB24</a>
       <a href="#" class="contact-pill">◉ vdbonweb</a>
@@ -513,13 +514,6 @@
 
 </div>
 
-<script>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
   // Intersection observer for section reveals
-  const sections = document.querySelectorAll('section');
-  const io = new IntersectionObserver((entries) => {
-    entries.forEach(e => { if (e.isIntersecting) { e.target.classList.add('visible'); } });
-  }, { threshold: 0.1 });
-  sections.forEach(s => io.observe(s));
-</script>
-</body>
-</html>
+  const sections = document.querySelectorAll(
